<resources>
    <string name="app_name">Popular Cocktails</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_main_drink">Popular Cocktails</string>

    <string name="action_settings">Settings</string>

    <string name="share">Share</string>
    <string name="detail_view">Detail View</string>
    <string name="title_activity_detail">Cocktail Detail</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- About page -->

    <!-- Fragment cocktail detail -->
    <string name="detail_name_placeholder">Almo Splash</string>
    <string name="detail_type_placeholder">Alcoholic - Ordinary Drink</string>
    <string name="detail_method_label">Method:</string>
    <string name="detail_method_placeholder">Mix with cracked ice and strain into collins glass.</string>
    <string name="detail_ingredients_label">Ingredients:</string>
    <string name="detail_text_dash">-</string>
    <string name="action_sort_by_all">All</string>
    <string name="action_sort_by_alcoholic">Alcoholic</string>
    <string name="action_sort_by_non_alcoholic">Non Alcoholic</string>

    <string name="no_fav_drinks">No cocktails in your favorite list</string>
    <string name="griditem_image">cocktail Image</string>
    <string name="griditem_name">Cocktail Name</string>

    <string name="gridview_list">Cocktails list</string>
    <string name="toolbar_des">Cocktail toolbar</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="cocktail_name">cocktail Name</string>
    <string name="detail_prepare">Preparation of Cocktail</string>
    <string name="cocktail_icon">cocktail icon</string>
    <string name="favourite_drinks">Favourite Drinks</string>
    <string name="type">Type</string>
    <string name="widget_title">Saved Cocktails</string>
    <string name="SaveinDb">Saving Data in DB</string>
    <string name="downloading_content">Downloading Content</string>
    <string name="share_intent">Have fun with Cocktail collection http://www.google.com</string>
</resources>
