<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/widget_title"
    android:id="@+id/list_item_layout"
    android:layout_weight="1">

    <ImageView
        android:id="@+id/widget_image"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:contentDescription="@string/cocktail_icon"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.8">

    <TextView
        android:id="@+id/widget_cocktail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_name"
        android:singleLine="true"
        android:textSize="@dimen/widget_ct_name"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:id="@+id/widget_cocktail_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_padding"
        android:textSize="@dimen/widget_ct_type"
        android:text="@string/type"/>

        </LinearLayout>

</LinearLayout>